# paperqa_skill

./: .gitignore  README.en.md  README.md  SKILL.md  __init__.py  pyproject.toml  test_network.py  test_skill.py
example/: run_report.py  test_full_pipeline.py  test_renderer.py
example/demo_output/2312/: 2312_report_cn.html  2312_report_cn.txt  2312_report_en.html  2312_report_en.txt  2312_report_zh.html  2312_report_zh.txt  Identify_and_analyze_every_major_innovation_and_no.txt  Provide_a_comprehensive_overview_of_the_paper_2312.txt
paperqa_skill/: __init__.py
templates/: report_template.html
